# slambook2

MingruiSLAM/ch10/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  result_lie.g2o
MingruiSLAM/ch11/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
MingruiSLAM/ch12/dense_mono/: dense_mapping.cpp
MingruiSLAM/ch13/: CMakeLists.txt
MingruiSLAM/ch13/app/: CMakeLists.txt  run_kitti_stereo.cpp
MingruiSLAM/ch13/config/: default.yaml
MingruiSLAM/ch13/include/myslam/: common_include.h  dataset.h  feature.h  frame.h  frontend.h  map.h  mappoint.h  viewer.h
MingruiSLAM/ch13/map/: all_key_poses.txt
MingruiSLAM/ch13/src/: CMakeLists.txt  camera.cpp  dataset.cpp  feature.cpp  map.cpp  visual_odometry.cpp
MingruiSLAM/ch2/: libHelloSLAM.cpp  libHelloSLAM.h
MingruiSLAM/ch3/useEigen/: CMakeLists.txt
MingruiSLAM/ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
MingruiSLAM/ch4/trajectoryError/: CMakeLists.txt  trajectoryError.cpp
MingruiSLAM/ch4/useSophus/: CMakeLists.txt
MingruiSLAM/ch5/cameraCalibration/: calibration.cpp  mycalibdata.txt
MingruiSLAM/ch6/ceresCerveFitting/: CMakeLists.txt  ceresCurveFitting.cpp
MingruiSLAM/ch6/g2oCurveFitting/: CMakeLists.txt
MingruiSLAM/ch6/gaussNewton/: gaussNewton.cpp
MingruiSLAM/ch7/orb_cv/: orb_cv.cpp
MingruiSLAM/ch7/orb_self/: CMakeLists.txt  orb_self(复件).cpp  orb_self.cpp
MingruiSLAM/ch7/pose_estimation_3d2d/: CMakeLists.txt  pose_estimation_3d2d.cpp
MingruiSLAM/ch7/pose_estimation_3d3d/: CMakeLists.txt
MingruiSLAM/ch8/: CMakeLists.txt
MingruiSLAM/ch9/: CMakeLists.txt  bundle_adjustment_ceres.cpp
ch12/dense_mono/: dense_mapping.cpp
ch7/: triangulation.cpp
my_implementation_1/: README.md
my_implementation_1/ch12/dense_RGBD/: CMakeLists.txt  pointcloud_mapping.cpp
my_implementation_1/ch12/dense_mono/: CMakeLists.txt
my_implementation_1/ch13/app/: show_trajectory.cpp
my_implementation_1/ch13/config/: default.yaml
my_implementation_1/ch13/include/myslam/: backend.h  camera.h  config.h  feature.h  g2o_types.h  visual_odometry.h
my_implementation_1/ch13/map/: all_key_poses_2.txt
my_implementation_1/ch13/src/: backend.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  mappoint.cpp  viewer.cpp
my_implementation_1/ch2/: CMakeLists.txt  HelloSLAM.cpp
my_implementation_1/ch3/useEigen/: eigenMatrix.cpp
my_implementation_1/ch4/useSophus/: useSophus.cpp
my_implementation_1/ch6/g2oCurveFitting/: g2oCurveFitting.cpp
my_implementation_1/ch6/gaussNewton/: CMakeLists.txt
my_implementation_1/ch7/orb_cv/: CMakeLists.txt
my_implementation_1/ch7/pose_estimation_2d2d/: CMakeLists.txt  pose_estimation_2d2d.cpp
my_implementation_1/ch7/pose_estimation_3d3d/: pose_estimation_3d3d.cpp
my_implementation_1/ch7/triangulation/: CMakeLists.txt  triangulation.cpp
my_implementation_1/ch8/: direct_method.cpp  optical_flow.cpp
my_implementation_1/ch9/: SnavelyReprojectionError.h  bundle_adjustment_g2o.cpp  final_g2o.ply
my_implementation_2/: README.md
my_implementation_2/ch3/example/: CMakeLists.txt  coordinateTransform.cpp
my_implementation_2/ch4/example/: CMakeLists.txt  trajectoryError.cpp
my_implementation_2/ch5/undistortImage/: CMakeLists.txt  undistortImage.cpp
my_implementation_2/ch6/ceresCurveFitting/: CMakeLists.txt  ceresCurveFitting.cpp
my_implementation_2/ch6/gaussNewton/: CMakeLists.txt  gaussNewton.cpp
my_implementation_2/ch7/myORB/: CMakeLists.txt  myORB.cpp
my_implementation_2/ch7/opencvORB/: CMakeLists.txt  opencvORB.cpp
my_implementation_2/ch7/poseEstimation2d2d/: CMakeLists.txt  poseEstimation2d2d.cpp
my_implementation_2/ch7/poseEstimation3d2d/: CMakeLists.txt
original_content/ch13/config/: default.yaml
original_content/ch5/stereo/: CMakeLists.txt
original_content/ch7/: pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
original_content/ch8/: direct_method.cpp
